# poc-cubeworld

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README  README.osx  README.win32  STATUS  do_ugly_osx_bundle.sh
resources/: plugins.cfg  resources.cfg
resources/OGRE/media/materials/scripts/: TopBoard.material  bug.material
resources/OGRE/media/materials/textures/minecraft/: terrain.xcf
resources/osx/: resources.cfg
src/: BaseApp.cpp  BaseApp.h  BaseApplication.cpp  BaseApplication.h  CubeWorld.cpp  CubeWorld.h  TutorialApplication.cpp  TutorialApplication.h  compat.h  erosion.h  il_defs.cpp  il_defs.h  il_landscape.cpp  il_landscape.h  il_map.cpp  il_map.h  il_noiseutils.cpp  il_noiseutils.h
src/noiseutils/: noiseutils.cpp  noiseutils.h
src/old/: BaseApplication.cpp  BaseApplication.h
